# Sand-Box2D

./: .gitignore  CMakeLists.txt  LICENSE  NetworkManager.h  README.md  icon.rc
.github/workflows/: build.yml  main.yml
assets/: default_settings_pc.json  default_settings_vita.json
assets/default_level/: default_level.json
assets/default_settings/: linux.json  vita.json  windows.json
assets/scripts/: example.py
assets/sfx/: index.json
assets/translations/en/: corner.dlg  lang_selector.json  levels.json  menu.json  pause.json
assets/translations/fr/: corner.dlg  lang_selector.json  levels.json  menu.json  pause.json
assets/translations/jp/: corner.dlg  lang_selector.json  levels.json  menu.json  pause.json
assets/translations/jp_but_its_a_joke/: lang_selector.json
assets/translations/ru/: corner.dlg  lang_selector.json  levels.json  menu.json  pause.json
assets/translations/ua/: corner.dlg  lang_selector.json  levels.json  menu.json  pause.json
pics/: Sand-Box2D-icon-rounded.xcf  Sand-Box2D-icon.xcf  Sand-Box2D-logo-wide.xcf  Sand-Box2D-logo.xcf  Sand-Box2D-vita-bg.xcf  Sand-Box2D-vita-loading.xcf  Sand-Box2D-vita-startup.xcf  console_concept.xcf  pixel-ava.xcf  project-arch.drawio  videosample.mkv
pics/sce_sys/livearea/contents/: template.xml
src/: AnimationManager.cpp  AnimationManager.h  Animations.cpp  Animations.h  BoxEntity.cpp  BoxEntity.h  CircleEntity.cpp  CircleEntity.h  Controls.cpp  Controls.h  Files.h  FontManager.cpp  FontManager.h  Fonts.cpp  Fonts.h  GameManager.cpp  GameManager.h  LangSelector.cpp  LangSelector.h  Level.cpp  Level.h  MainMenu.cpp  MainMenu.h  Network.cpp  Network.h  NetworkManager.cpp  NetworkManager.cpp_off  NetworkManager.h  NetworkManager.h_off  OptionsMenu.h  PhysicsObj.cpp  PhysicsObj.h  PlatformEntity.cpp  PlatformEntity.h  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  SoundManager.cpp  SoundManager.h  (+8 more)
src/PObjs/: BasePObj.cpp  BasePObj.h  PObjBox.cpp  PObjBox.h  PObjCircle.cpp  PObjCircle.h  PObjPlatform.cpp  PObjPlatform.h
src/Screens/: LangSelector.cpp  LangSelector.h  MainMenu.cpp  MainMenu.h  OptionsMenu.cpp  OptionsMenu.h  WorldManager.cpp  WorldManager.h
src/System/: Animations.cpp  Animations.h  Controls.cpp  Controls.h  Files.cpp  Files.h  Fonts.cpp  Fonts.h  Json.h  Level.cpp  Level.h  Network.h  Python.h  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  SoundManager.cpp  SoundManager.h  Translations.cpp  Translations.h
